--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "react-use-cart": "^1.14.0",
+    "sonner": "^2.0.1",
     "vite": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
